src-tauri/check_error.txt
    Checking tauri-apphowlingual v0.1.0 (/Users/flow/Programs/Howlingual/src-tauri)
error[E0277]: `Result<u32, XCapError>` doesn't implement `std::fmt::Display`
   --> src/lib.rs:944:17
    |
942 |                 "[ocr] Capturing monitor {}: {}x{} at ({},{})",
    |                                              -- required by this formatting parameter
943 |                 index,
944 |                 mon_width,
    |                 ^^^^^^^^^ `Result<u32, XCapError>` cannot be formatted with the default formatter
    |
    = help: the trait `std::fmt::Display` is not implemented for `Result<u32, XCapError>`
    = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
    = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `Result<i32, XCapError>` doesn't implement `std::fmt::Display`
   --> src/lib.rs:946:17
    |
942 |                 "[ocr] Capturing monitor {}: {}x{} at ({},{})",
    |                                                        -- required by this formatting parameter
...
946 |                 monitor.x(),
    |                 ^^^^^^^^^^^ `Result<i32, XCapError>` cannot be formatted with the default formatter
    |
    = help: the trait `std::fmt::Display` is not implemented for `Result<i32, XCapError>`
    = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
    = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
   --> src/lib.rs:969:20
    |
969 |                 x: monitor.x(),
    |                    ^^^^^^^^^^^ expected `i32`, found `Result<i32, XCapError>`
    |
    = note: expected type `i32`
               found enum `Result<i32, XCapError>`
help: use the `?` operator to extract the `Result<i32, XCapError>` value, propagating a `Result::Err` value to the caller
    |
969 |                 x: monitor.x()?,
    |                               +

error[E0308]: mismatched types
   --> src/lib.rs:970:20
    |
970 |                 y: monitor.y(),
    |                    ^^^^^^^^^^^ expected `i32`, found `Result<i32, XCapError>`
    |
    = note: expected type `i32`
               found enum `Result<i32, XCapError>`
help: use the `?` operator to extract the `Result<i32, XCapError>` value, propagating a `Result::Err` value to the caller
    |
970 |                 y: monitor.y()?,
    |                               +

error[E0308]: mismatched types
   --> src/lib.rs:973:24
    |
973 |                 width: mon_width,
    |                        ^^^^^^^^^ expected `u32`, found `Result<u32, XCapError>`
    |
    = note: expected type `u32`
               found enum `Result<u32, XCapError>`
help: use the `?` operator to extract the `Result<u32, XCapError>` value, propagating a `Result::Err` value to the caller
    |
973 |                 width: mon_width?,
    |                                 +

error[E0308]: mismatched types
   --> src/lib.rs:974:25
    |
974 |                 height: mon_height,
    |                         ^^^^^^^^^^ expected `u32`, found `Result<u32, XCapError>`
    |
    = note: expected type `u32`
               found enum `Result<u32, XCapError>`
help: use the `?` operator to extract the `Result<u32, XCapError>` value, propagating a `Result::Err` value to the caller
    |
974 |                 height: mon_height?,
    |                                   +

error[E0308]: mismatched types
   --> src/lib.rs:981:29
    |
981 |                 cursor_x >= monitor.x()
    |                 --------    ^^^^^^^^^^^ expected `i32`, found `Result<i32, XCapError>`
    |                 |
    |                 expected because this is `i32`
    |
    = note: expected type `i32`
               found enum `Result<i32, XCapError>`
help: use the `?` operator to extract the `Result<i32, XCapError>` value, propagating a `Result::Err` value to the caller
    |
981 |                 cursor_x >= monitor.x()?
    |                                        +

error[E0369]: cannot add `i32` to `Result<i32, XCapError>`
   --> src/lib.rs:982:47
    |
982 |                     && cursor_x < monitor.x() + monitor.width() as i32
    |                                   ----------- ^ ---------------------- i32
    |                                   |
    |                                   Result<i32, XCapError>
    |
note: the foreign item type `Result<i32, XCapError>` doesn't implement `std::ops::Add<i32>`
   --> /Users/flow/.rustup/toolchains/stable-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/result.rs:557:1
    |
557 | pub enum Result<T, E> {
    | ^^^^^^^^^^^^^^^^^^^^^ not implement `std::ops::Add<i32>`

error[E0308]: mismatched types
   --> src/lib.rs:983:36
    |
983 |                     && cursor_y >= monitor.y()
    |                        --------    ^^^^^^^^^^^ expected `i32`, found `Result<i32, XCapError>`
    |                        |
    |                        expected because this is `i32`
    |
    = note: expected type `i32`
               found enum `Result<i32, XCapError>`
help: use the `?` operator to extract the `Result<i32, XCapError>` value, propagating a `Result::Err` value to the caller
    |
983 |                     && cursor_y >= monitor.y()?
    |                                               +

error[E0369]: cannot add `i32` to `Result<i32, XCapError>`
   --> src/lib.rs:984:47
    |
984 |                     && cursor_y < monitor.y() + monitor.height() as i32
    |                                   ----------- ^ ----------------------- i32
    |                                   |
    |                                   Result<i32, XCapError>
    |
note: the foreign item type `Result<i32, XCapError>` doesn't implement `std::ops::Add<i32>`
   --> /Users/flow/.rustup/toolchains/stable-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/result.rs:557:1
    |
557 | pub enum Result<T, E> {
    | ^^^^^^^^^^^^^^^^^^^^^ not implement `std::ops::Add<i32>`

error[E0605]: non-primitive cast: `Result<u32, XCapError>` as `i32`
   --> src/lib.rs:982:49
    |
982 |                     && cursor_x < monitor.x() + monitor.width() as i32
    |                                                 ^^^^^^^^^^^^^^^^^^^^^^ an `as` expression can be used to convert enum types to numeric types only if the enum type is unit-only or field-less
    |
    = note: see https://doc.rust-lang.org/reference/items/enumerations.html#casting for more information

error[E0605]: non-primitive cast: `Result<u32, XCapError>` as `i32`
   --> src/lib.rs:984:49
    |
984 |                     && cursor_y < monitor.y() + monitor.height() as i32
    |                                                 ^^^^^^^^^^^^^^^^^^^^^^^ an `as` expression can be used to convert enum types to numeric types only if the enum type is unit-only or field-less
    |
    = note: see https://doc.rust-lang.org/reference/items/enumerations.html#casting for more information

error[E0599]: no method named `transparent` found for struct `WebviewWindowBuilder<'a, R, M>` in the current scope
   --> src/lib.rs:586:10
    |
584 | /     tauri::WebviewWindowBuilder::new(app, label, tauri::WebviewUrl::App(url.into()))
585 | |         .title("Howlingual Capture")
586 | |         .transparent(true)
    | |_________-^^^^^^^^^^^
    |
help: there is a method `parent` with a similar name
    |
586 -         .transparent(true)
586 +         .parent(true)
    |

error[E0599]: no method named `transparent` found for struct `WebviewWindowBuilder<'a, R, M>` in the current scope
   --> src/lib.rs:665:18
    |
660 |               builder = builder
    |  _______________________-
661 | |                 .title("Howlingual")
662 | |                 .inner_size(800.0, 600.0)
663 | |                 .min_inner_size(600.0, 400.0)
664 | |                 .title_bar_style(tauri::TitleBarStyle::Overlay)
665 | |                 .transparent(true);
    | |_________________-^^^^^^^^^^^
    |
help: there is a method `parent` with a similar name
    |
665 -                 .transparent(true);
665 +                 .parent(true);
    |

warning: unused variable: `sub_image`
    --> src/lib.rs:1056:9
     |
1056 |     let sub_image = image::imageops::crop_imm(&image, x_u32, y_u32, width, height).to_image();
     |         ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_sub_image`
     |
     = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0277, E0308, E0369, E0599, E0605.
For more information about an error, try `rustc --explain E0277`.
warning: `tauri-apphowlingual` (lib) generated 1 warning
error: could not compile `tauri-apphowlingual` (lib) due to 14 previous errors; 1 warning emitted
